--- a/Platforms/Marvell/Armada/armada-8040-mcbin.dts
+++ b/Platforms/Marvell/Armada/armada-8040-mcbin.dts
@@ -371,9 +371,9 @@
 			device_type = "pci";
 			dma-coherent;
 			msi-parent = <0x3>;
-			bus-range = <0x0 0xfe>;
+			bus-range = <0x0 0xff>;
 			ranges =
-				<0x81000000 0x0 0xeff00000 0x0 0xeff00000 0x0 0x10000>,
+				<0x81000000 0x0 0xf6000000 0x0 0xf6000000 0x0 0x10000>,
 				<0x82000000 0x0 0xc0000000 0x0 0xc0000000 0x0 0x20000000>;
 
 			interrupt-map-mask = <0x0 0x0 0x0 0x0>;
