--- a/Platforms/Marvell/Armada/armada-8040-mcbin.dts
+++ b/Platforms/Marvell/Armada/armada-8040-mcbin.dts
@@ -187,7 +187,10 @@
 				status = "okay";
 				bus-width = <0x8>;
 				no-1-8-v;
+				no-sd;
+				no-sdio;
 				non-removable;
+				vqmmc-supply = <0x5>;
 			};
 
 			system-controller@6f4000 {
@@ -251,7 +254,7 @@
 			ethernet@0 {
 				compatible = "marvell,armada-7k-pp22";
 				reg = <0x0 0x100000 0x129000 0xb000>;
-				clocks = <0x5 0x1 0x3 0x5 0x1 0x9 0x5 0x1 0x5>;
+				clocks = <0x6 0x1 0x3 0x6 0x1 0x9 0x6 0x1 0x5>;
 				clock-names = "pp_clk", "gop_clk", "mg_clk";
 				status = "disabled";
 				dma-coherent;
@@ -283,11 +286,12 @@
 				#size-cells = <0x0>;
 				compatible = "marvell,orion-mdio";
 				reg = <0x12a200 0x10>;
+				clocks = <0x6 0x1 0x9 0x6 0x1 0x5>;
 
 				ethernet-phy@0 {
 					reg = <0x0>;
-					linux,phandle = <0x7>;
-					phandle = <0x7>;
+					linux,phandle = <0x9>;
+					phandle = <0x9>;
 				};
 			};
 
@@ -297,8 +301,8 @@
 				#clock-cells = <0x2>;
 				core-clock-output-names = "cpm-apll", "cpm-ppv2-core", "cpm-eip", "cpm-core", "cpm-nand-core";
 				gate-clock-output-names = "cpm-audio", "cpm-communit", "cpm-nand", "cpm-ppv2", "cpm-sdio", "cpm-mg-domain", "cpm-mg-core", "cpm-xor1", "cpm-xor0", "cpm-gop-dp", "none", "cpm-pcie_x10", "cpm-pcie_x11", "cpm-pcie_x4", "cpm-pcie-xor", "cpm-sata", "cpm-sata-usb", "cpm-main", "cpm-sd-mmc-gop", "none", "none", "cpm-slow-io", "cpm-usb3h0", "cpm-usb3h1", "cpm-usb3dev", "cpm-eip150", "cpm-eip197";
-				linux,phandle = <0x5>;
-				phandle = <0x5>;
+				linux,phandle = <0x6>;
+				phandle = <0x6>;
 			};
 
 			rtc@284000 {
@@ -313,7 +317,7 @@
 				compatible = "marvell,armada-8k-ahci", "generic-ahci";
 				reg = <0x540000 0x30000>;
 				interrupts = <0x0 0x3f 0x4>;
-				clocks = <0x5 0x1 0xf>;
+				clocks = <0x6 0x1 0xf>;
 				status = "okay";
 			};
 
@@ -322,7 +326,7 @@
 				reg = <0x500000 0x4000>;
 				dma-coherent;
 				interrupts = <0x0 0x3e 0x4>;
-				clocks = <0x5 0x1 0x16>;
+				clocks = <0x6 0x1 0x16>;
 				status = "okay";
 			};
 
@@ -331,7 +335,7 @@
 				reg = <0x510000 0x4000>;
 				dma-coherent;
 				interrupts = <0x0 0x3d 0x4>;
-				clocks = <0x5 0x1 0x17>;
+				clocks = <0x6 0x1 0x17>;
 				status = "okay";
 			};
 
@@ -340,7 +344,7 @@
 				reg = <0x6a0000 0x1000 0x6b0000 0x1000>;
 				dma-coherent;
 				msi-parent = <0x3>;
-				clocks = <0x5 0x1 0x8>;
+				clocks = <0x6 0x1 0x8>;
 			};
 
 			xor@6c0000 {
@@ -348,7 +352,7 @@
 				reg = <0x6c0000 0x1000 0x6d0000 0x1000>;
 				dma-coherent;
 				msi-parent = <0x3>;
-				clocks = <0x5 0x1 0x7>;
+				clocks = <0x6 0x1 0x7>;
 			};
 
 			spi@700600 {
@@ -357,7 +361,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				cell-index = <0x1>;
-				clocks = <0x5 0x1 0x15>;
+				clocks = <0x6 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -367,7 +371,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				cell-index = <0x2>;
-				clocks = <0x5 0x1 0x15>;
+				clocks = <0x6 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -377,7 +381,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				interrupts = <0x0 0x56 0x4>;
-				clocks = <0x5 0x1 0x15>;
+				clocks = <0x6 0x1 0x15>;
 				status = "okay";
 				clock-frequency = <0x186a0>;
 			};
@@ -388,7 +392,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				interrupts = <0x0 0x57 0x4>;
-				clocks = <0x5 0x1 0x15>;
+				clocks = <0x6 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -396,7 +400,7 @@
 				compatible = "marvell,armada-8k-rng", "inside-secure,safexcel-eip76";
 				reg = <0x760000 0x7d>;
 				interrupts = <0x0 0x3b 0x4>;
-				clocks = <0x5 0x1 0x19>;
+				clocks = <0x6 0x1 0x19>;
 				status = "okay";
 			};
 
@@ -405,20 +409,20 @@
 				reg = <0x780000 0x300>;
 				interrupts = <0x0 0x45 0x4>;
 				clock-names = "core";
-				clocks = <0x5 0x1 0x4>;
+				clocks = <0x6 0x1 0x4>;
 				dma-coherent;
 				status = "okay";
+				broken-cd;
 				bus-width = <0x4>;
-				no-1-8-v;
-				non-removable;
+				vqmmc-supply = <0x7>;
 			};
 
 			crypto@800000 {
 				compatible = "inside-secure,safexcel-eip197";
 				reg = <0x800000 0x200000>;
-				interrupts = <0x0 0x22 0x5 0x0 0x36 0x4 0x0 0x37 0x4 0x0 0x38 0x4 0x0 0x39 0x4 0x0 0x3a 0x4>;
+				interrupts = <0x0 0x22 0x4 0x0 0x36 0x4 0x0 0x37 0x4 0x0 0x38 0x4 0x0 0x39 0x4 0x0 0x3a 0x4>;
 				interrupt-names = "mem", "ring0", "ring1", "ring2", "ring3", "eip";
-				clocks = <0x5 0x1 0x1a>;
+				clocks = <0x6 0x1 0x1a>;
 				status = "disabled";
 			};
 		};
@@ -439,7 +443,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x20 0x4>;
 			interrupts = <0x0 0x20 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x5 0x1 0xd>;
+			clocks = <0x6 0x1 0xd>;
 			status = "okay";
 		};
 
@@ -459,7 +463,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x22 0x4>;
 			interrupts = <0x0 0x22 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x5 0x1 0xb>;
+			clocks = <0x6 0x1 0xb>;
 			status = "disabled";
 		};
 
@@ -479,7 +483,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x21 0x4>;
 			interrupts = <0x0 0x21 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x5 0x1 0xc>;
+			clocks = <0x6 0x1 0xc>;
 			status = "disabled";
 		};
 	};
@@ -508,7 +512,7 @@
 			ethernet@0 {
 				compatible = "marvell,armada-7k-pp22";
 				reg = <0x0 0x100000 0x129000 0xb000>;
-				clocks = <0x6 0x1 0x3 0x6 0x1 0x9 0x6 0x1 0x5>;
+				clocks = <0x8 0x1 0x3 0x8 0x1 0x9 0x8 0x1 0x5>;
 				clock-names = "pp_clk", "gop_clk", "mg_clk";
 				status = "okay";
 				dma-coherent;
@@ -525,7 +529,7 @@
 					port-id = <0x1>;
 					gop-port-id = <0x2>;
 					status = "okay";
-					phy = <0x7>;
+					phy = <0x9>;
 					phy-mode = "sgmii";
 				};
 
@@ -542,6 +546,7 @@
 				#size-cells = <0x0>;
 				compatible = "marvell,orion-mdio";
 				reg = <0x12a200 0x10>;
+				clocks = <0x8 0x1 0x9 0x8 0x1 0x5>;
 			};
 
 			system-controller@440000 {
@@ -550,15 +555,15 @@
 				#clock-cells = <0x2>;
 				core-clock-output-names = "cps-apll", "cps-ppv2-core", "cps-eip", "cps-core", "cps-nand-core";
 				gate-clock-output-names = "cps-audio", "cps-communit", "cps-nand", "cps-ppv2", "cps-sdio", "cps-mg-domain", "cps-mg-core", "cps-xor1", "cps-xor0", "cps-gop-dp", "none", "cps-pcie_x10", "cps-pcie_x11", "cps-pcie_x4", "cps-pcie-xor", "cps-sata", "cps-sata-usb", "cps-main", "cps-sd-mmc-gop", "none", "none", "cps-slow-io", "cps-usb3h0", "cps-usb3h1", "cps-usb3dev", "cps-eip150", "cps-eip197";
-				linux,phandle = <0x6>;
-				phandle = <0x6>;
+				linux,phandle = <0x8>;
+				phandle = <0x8>;
 			};
 
 			sata@540000 {
 				compatible = "marvell,armada-8k-ahci", "generic-ahci";
 				reg = <0x540000 0x30000>;
 				interrupts = <0x0 0x11f 0x4>;
-				clocks = <0x6 0x1 0xf>;
+				clocks = <0x8 0x1 0xf>;
 				status = "okay";
 			};
 
@@ -567,9 +572,9 @@
 				reg = <0x500000 0x4000>;
 				dma-coherent;
 				interrupts = <0x0 0x11e 0x4>;
-				clocks = <0x6 0x1 0x16>;
+				clocks = <0x8 0x1 0x16>;
 				status = "okay";
-				usb-phy = <0x8>;
+				usb-phy = <0xa>;
 			};
 
 			usb3@510000 {
@@ -577,7 +582,7 @@
 				reg = <0x510000 0x4000>;
 				dma-coherent;
 				interrupts = <0x0 0x11d 0x4>;
-				clocks = <0x6 0x1 0x17>;
+				clocks = <0x8 0x1 0x17>;
 				status = "disabled";
 			};
 
@@ -586,7 +591,7 @@
 				reg = <0x6a0000 0x1000 0x6b0000 0x1000>;
 				dma-coherent;
 				msi-parent = <0x3>;
-				clocks = <0x6 0x1 0x8>;
+				clocks = <0x8 0x1 0x8>;
 			};
 
 			xor@6c0000 {
@@ -594,7 +599,7 @@
 				reg = <0x6c0000 0x1000 0x6d0000 0x1000>;
 				dma-coherent;
 				msi-parent = <0x3>;
-				clocks = <0x6 0x1 0x7>;
+				clocks = <0x8 0x1 0x7>;
 			};
 
 			spi@700600 {
@@ -603,7 +608,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				cell-index = <0x3>;
-				clocks = <0x6 0x1 0x15>;
+				clocks = <0x8 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -613,7 +618,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				cell-index = <0x4>;
-				clocks = <0x6 0x1 0x15>;
+				clocks = <0x8 0x1 0x15>;
 				status = "okay";
 
 				spi-flash@0 {
@@ -629,7 +634,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				interrupts = <0x0 0x136 0x4>;
-				clocks = <0x6 0x1 0x15>;
+				clocks = <0x8 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -639,7 +644,7 @@
 				#address-cells = <0x1>;
 				#size-cells = <0x0>;
 				interrupts = <0x0 0x137 0x4>;
-				clocks = <0x6 0x1 0x15>;
+				clocks = <0x8 0x1 0x15>;
 				status = "disabled";
 			};
 
@@ -647,16 +652,16 @@
 				compatible = "marvell,armada-8k-rng", "inside-secure,safexcel-eip76";
 				reg = <0x760000 0x7d>;
 				interrupts = <0x0 0x138 0x4>;
-				clocks = <0x6 0x1 0x19>;
+				clocks = <0x8 0x1 0x19>;
 				status = "okay";
 			};
 
 			crypto@800000 {
 				compatible = "inside-secure,safexcel-eip197";
 				reg = <0x800000 0x200000>;
-				interrupts = <0x0 0x22 0x5 0x0 0x116 0x4 0x0 0x117 0x4 0x0 0x118 0x4 0x0 0x119 0x4 0x0 0x11a 0x4>;
+				interrupts = <0x0 0x22 0x4 0x0 0x116 0x4 0x0 0x117 0x4 0x0 0x118 0x4 0x0 0x119 0x4 0x0 0x11a 0x4>;
 				interrupt-names = "mem", "ring0", "ring1", "ring2", "ring3", "eip";
-				clocks = <0x6 0x1 0x1a>;
+				clocks = <0x8 0x1 0x1a>;
 				status = "disabled";
 			};
 		};
@@ -677,7 +682,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x100 0x4>;
 			interrupts = <0x0 0x100 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x6 0x1 0xd>;
+			clocks = <0x8 0x1 0xd>;
 			status = "disabled";
 		};
 
@@ -697,7 +702,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x102 0x4>;
 			interrupts = <0x0 0x102 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x6 0x1 0xb>;
+			clocks = <0x8 0x1 0xb>;
 			status = "disabled";
 		};
 
@@ -717,7 +722,7 @@
 			interrupt-map = <0x0 0x0 0x0 0x0 0x1 0x0 0x0 0x101 0x4>;
 			interrupts = <0x0 0x101 0x4>;
 			num-lanes = <0x1>;
-			clocks = <0x6 0x1 0xc>;
+			clocks = <0x8 0x1 0xc>;
 			status = "disabled";
 		};
 	};
@@ -738,6 +743,8 @@
 		regulator-max-microvolt = <0x325aa0>;
 		regulator-always-on;
 		status = "okay";
+		linux,phandle = <0x7>;
+		phandle = <0x7>;
 	};
 
 	regulator-1-8v {
@@ -747,6 +754,8 @@
 		regulator-max-microvolt = <0x1b7740>;
 		regulator-always-on;
 		status = "okay";
+		linux,phandle = <0x5>;
+		phandle = <0x5>;
 	};
 
 	regulator-usb3-vbus0 {
@@ -756,14 +765,14 @@
 		regulator-max-microvolt = <0x4c4b40>;
 		regulator-always-on;
 		status = "okay";
-		linux,phandle = <0x9>;
-		phandle = <0x9>;
+		linux,phandle = <0xb>;
+		phandle = <0xb>;
 	};
 
 	usb3_phy0 {
 		compatible = "usb-nop-xceiv";
-		vcc-supply = <0x9>;
-		linux,phandle = <0x8>;
-		phandle = <0x8>;
+		vcc-supply = <0xb>;
+		linux,phandle = <0xa>;
+		phandle = <0xa>;
 	};
 };
